@@ -290,6 +290,9 @@ Release 2.8.0 - UNRELEASED
     YARN-2893. AMLaucher: sporadic job failures due to EOFException in
     readTokenStorageStream. (Zhihai Xu via gera)
 
+    YARN-2454. Fix compareTo of variable UNBOUNDED in o.a.h.y.util.resource.Resources.
+    (Xu Yang via junping_du)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
